# codeman_sachs

./: .gitignore  README.md
backend/: admin_creation.py  main.py  pyproject.toml  requirements.txt  test_model.py
backend/alembic/: env.py
backend/alembic/versions/: 079e103a84a2_code_block_table.py  094acd28c168_update_code_blocks_for_migration_.py  48fb6d3c5c4d_code_block_change.py  7a7987d6b4b0_code_block_table.py  7aa829f238bb_create_zip_projects_table.py  9e74202a5aef_add_role_to_users.py  b18fffcf7447_create_zip_projects_table.py  c055dea79c53_created_the_code_block_table.py  d64831b143e4_create_users_table.py  f4668fd7b3e6_create_users_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/models/: __init__.py  code_block.py  project_info.py  user.py  zip_project.py
backend/rag/: llama_index_service.py  retriever.py
backend/repo/: auth_repo.py  code_repo.py  zip_repo.py
backend/routes/: auth.py  code.py  migration.py  zip_routes.py
backend/schema/: auth_schema.py  code_schema.py  token_schema.py  zip_schema.py
backend/services/: auth_service.py  code_service.py  llm_service.py  migration_service.py  zip_service.py
backend/utils/: file_scanner.py  language_detector.py  zip_utils.py
frontend/: index.html  package-lock.json  package.json
frontend/codeman/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Features.jsx  Hero.jsx  Navbar.jsx  Workflow.jsx
frontend/src/pages/: Dashboard.jsx  Landing.jsx  Login.jsx  Signup.jsx
(+24 files in other folders)
