[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.4",
    "bcrypt==4.1.3",
    "email-validator==2.2.0",
    "fastapi==0.116.1",
    "passlib[bcrypt]==1.7.4",
    "psycopg2-binary==2.9.10",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.41",
    "uvicorn[standard]==0.35.0",
]
